--- a/css/home_works.css
+++ b/css/home_works.css
@@ -1,4 +1,3 @@
-
 /* GMAIL BLOCK */
 
 .gmail_block {
@@ -54,9 +53,10 @@
     top: 0;
     width: 50px;
     height: 50px;
-    background-color: red;
+    background-image: url('https://otkritkis.com/wp-content/uploads/2022/07/hcndu.gif'); /* Путь к вашей анимации */
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-
 
 
 .inner_move_block {
@@ -89,24 +89,26 @@
     font-style: normal;
     transform: rotate(var(--rotate)) translateX(var(--dail-size));
 }
+
 .spike:nth-child(5n+1) {
     box-shadow: -7px 0 #fff9;
 }
+
 .spike:nth-child(5n+1):after {
     content: attr(data-i);
     position: absolute;
     right: 22px;
     top: -10px;
     transition: 1s linear;
-    transform: rotate(calc( var(--dRotate) - var(--rotate)));
+    transform: rotate(calc(var(--dRotate) - var(--rotate)));
 }
 
 .seconds {
     --dRotate: 0deg;
-    --dail-size: calc((var(--clock-size)/ 2) - 8px);
+    --dail-size: calc((var(--clock-size) / 2) - 8px);
     font-weight: 800;
     font-size: 18px;
-    transform: rotate(calc( -1 * var(--dRotate)));
+    transform: rotate(calc(-1 * var(--dRotate)));
     position: absolute;
     inset: 0;
     margin: auto;
@@ -114,9 +116,9 @@
 }
 
 .minutes {
-    --dail-size: calc((var(--clock-size)/ 2) - 65px);
+    --dail-size: calc((var(--clock-size) / 2) - 65px);
     font-size: 16px;
-    transform: rotate(calc( -1 * var(--dRotate)));
+    transform: rotate(calc(-1 * var(--dRotate)));
     position: absolute;
     inset: 0;
     margin: auto;
@@ -126,6 +128,7 @@
 .stop-anim {
     transition: 0s linear;
 }
+
 .stop-anim .spike:after {
     transition: 0s linear !important;
 }
@@ -145,10 +148,11 @@
     position: absolute;
     background: #000;
     z-index: 10;
-    right: calc(var(--clock-size)/ 4.5);
+    right: calc(var(--clock-size) / 4.5);
     top: 50%;
     transform: translateY(-50%);
 }
+
 .minute:after {
     content: "";
     position: absolute;
@@ -158,7 +162,7 @@
     left: -10px;
     top: 50%;
     border-radius: 40px 0 0 40px;
-    width: calc(var(--clock-size)/ 2.75);
+    width: calc(var(--clock-size) / 2.75);
     transform: translatey(-50%);
 }
 
